bugfixes
* fixed backend chat messages not parsing json text
* fixed notes text on piano widget from the sounds panel having shadows
* fixed a concurrent issue with keybinds
* fixed a concurrent issue with sounds
* fixed error description of reading pings not including the source (owner)
* fixed lua error messages not including the errored line
* fixed loading order of cube faces having unsorted order
* fixed an issue when reading malformed animations
* added immediatelyfast in the conflicts list